--- a/testDesign.css
+++ b/testDesign.css
@@ -1,5 +1,192 @@
-header {
-    color: blue;
-    font-size: small;
-    background-color: brown;
+* {
+  font-family: 'Righteous', cursive;
 }
+
+body {
+  background-color: rgb(251, 246, 246);
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  background-color: rgb(108 94 94);
+  position: fixed;
+  width: 99%;
+  position: absolute;
+  top: 0;
+}
+
+nav {
+  float: right;
+}
+
+header div img {
+  width: 53px;
+  height: 55px;
+  border-radius: 154%;
+  margin: 20px 0 13px 19px;
+  float: left;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 20px 10px;
+  font-family: 'Righteous', cursive;
+  margin-right: 30px;
+}
+
+a {
+  color: #fffbf3;
+  text-decoration: none;
+}
+
+.heading {
+  padding: 30px;
+  color: white;
+  font-size: 80px;
+  /* position: relative;
+  top: 41px; */
+}
+
+main div h1 {
+    padding: 329px;
+    color: #070604;
+    font-size: 66px;
+
+}
+
+
+
+
+#med-sec {
+  display: flex;
+}
+
+#img-part {
+  margin: 40px 100px;
+}
+
+#img-part img {
+  width: 400px;
+  height: 400px;
+  border-radius: 20px;
+}
+
+div#par-part {
+  background-color: #f9ca7a;
+  width: 600px;
+  height: 400px;
+  margin: 40px 100px;
+  border-radius: 20px;
+  box-shadow: 0px 3px 7px #0000006e;
+}
+
+#par-part p {
+  font-family: 'Itim', cursive;
+  font-family: 'Ribeye Marrow', cursive;
+  font-size: 35px;
+  padding: 30px;
+}
+
+div#sub-title {
+  font-size: 50px;
+
+}
+
+table {
+  width: 70%;
+  text-align: center;
+}
+
+td, th {
+  border: 1px solid black;
+}
+
+th {
+  padding: 35px 20px;
+}
+
+td {
+  padding: 15px;
+}
+
+div#Table-sec {
+
+  background-color:#fbf6f6;
+}
+
+div#form-title {
+  font-size: 50px;
+  text-align: center;
+}
+
+div#form {
+padding-top: 100px;}
+
+input, select, button {
+  padding: 12px 20px;
+}
+
+input, select, button {
+  padding: 12px 20px;
+  width: 50%;
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin-top: 15px;
+  margin-left: 20px;
+}
+
+/* footer */
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+  background-color: rgb(125, 112, 112);
+  font-family: 'Righteous', cursive;
+  padding: 10px;
+
+
+
+}
+
+#footer-logo img {
+  margin-top: 20px;
+  float: left;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+}
+
+#social-media {
+
+  color: blanchedalmond;
+  float: right;
+
+}
+
+#social-media p {
+  margin: 0 20px 20px 0;
+}
+
+#copy-rights {
+
+  color: blanchedalmond;
+  margin-top: 25px;
+  text-align: center;
+}
+#tasks{
+  padding-top: 120px;
+  padding-right: 60px;
+}
+#foot{
+  margin-top: 135px;
+}
+#img{
+  width: 10%;
+  padding-top: 100px;
+}
+
+
